feat: add vue-router for navigation and create basic routing structure
- Updated package.json to include vue-router and unplugin-vue-router.
- Modified App.vue to include RouterLink and RouterView for navigation.
- Updated main.ts to use the router instance.
- Added tsconfig.json types for unplugin-vue-router.
- Configured vite.config.ts to use unplugin-vue-router.
- Created about.vue and index.vue pages for routing.
- Implemented router/index.ts to define routes using auto-generated routes.
- Added typed-router.d.ts for type definitions related to routing.

--- a/desktop/frontend/tsconfig.json
+++ b/desktop/frontend/tsconfig.json
@@ -17,7 +17,8 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "types": ["unplugin-vue-router/client"]
   },
   "include": [
     "src",
