--- a/desktop/frontend/package.json
+++ b/desktop/frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@wailsio/runtime": "latest",
     "ant-design-vue": "^4.2.6",
-    "vue": "^3.5.26"
+    "vue": "^3.5.26",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@types/node": "^25.0.1",
@@ -20,6 +21,7 @@
     "@vitejs/plugin-vue-jsx": "^5.1.3",
     "typescript": "^5.9.3",
     "unocss": "^66.5.12",
+    "unplugin-vue-router": "^0.19.2",
     "vite": "^7.2.7 ",
     "vite-plugin-vue-devtools": "^8.0.5"
   }
